2011-04-07  Paul Carroll<pcarroll@codesourcery.com>

	* binutils-all/arm/simple.s: Demo issue with objdump with
	multiple input files
	* binutils-all/arm/objdump.exp: added new ARM test case code

2011-04-06  Joseph Myers  <joseph@codesourcery.com>

	* binutils-all/objcopy.exp (*arm*-*-coff): Change to arm*-*-coff.
	(xscale-*-coff, thumb*-*-coff, thumb*-*-pe): Don't handle.

2011-03-31  Bernd Schmidt  <bernds@codesourcery.com>

	* lib/binutils-common.exp (is_elf_format): Accept tic6x*-*-uclinux*.

2011-01-03  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* lib/binutils-common.exp (regexp_diff): Use "==" instead of "eq".

2010-12-31  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* binutils-all/copy-2.d: Change "hppa" to "hppa*" in not-target list.
	* binutils-all/copy-3.d: Add hppa*-*-hpux* to not-target list.
	* binutils-all/objcopy.exp (reverse-bytes): xfail on 32-bit hpux.

2010-12-31  Richard Sandiford  <rdsandiford@googlemail.com>

	* binutils-all/readelf.exp: Handle MIPS FreeBSD targets.

2010-12-09  Maciej W. Rozycki  <macro@codesourcery.com>

	* lib/binutils-common.exp (regexp_diff): Implement inverse
	matching, requested by `!'.

2010-11-20  Richard Sandiford  <rdsandiford@googlemail.com>

	* lib/binutils-common.exp (regexp_diff): New procedure.
	* lib/utils-lib.exp (regexp_diff): Delete.

2010-11-20  Richard Sandiford  <rdsandiford@googlemail.com>

	* lib/binutils-common.exp: New file.
	* lib/utils-lib.exp (load_common_lib): New function.  Load
	binutils-common.exp.
	(is_elf_format): Delete.

2010-11-15  H.J. Lu  <hongjiu.lu@intel.com>

	* binutils-all/compress.exp: Replace binutils_assemble with
	binutils_assemble_flags for --nocompress-debug-sections.

2010-11-15  H.J. Lu  <hongjiu.lu@intel.com>

	* binutils-all/compress.exp: Pass --nocompress-debug-sections to
	assembler for uncompressed debug sections.

	* binutils-all/testranges.d: Also expect .zdebug in section name.

2010-11-08  Thomas Schwinge  <thomas@schwinge.name>
